# the-sphere-game

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  TODO.md  architecture.md  build.ps1  build.sh
.github/: .copilot_instructions.md
assets/localization/: de.json  en.json
assets/scenes/basement/: entities.json  geometry.json
assets/scenes/test/: entities.json  geometry.json
assets/scenes/test2/: geometry.json
docs/: GEOMETRY_EDITOR.md  HOTSPOTS.md  NAVIGATION.md  WALKABLE_AREAS.md
github/: .copilot_instructions.md
src/: config.h  platform.h  types.h
src/collision/: polygon_utils.cpp  polygon_utils.h
src/core/: animation_bank.cpp  animation_bank.h  engine.cpp  engine.h  localization.cpp  localization.h  settings.cpp  settings.h  timing.cpp  timing.h  voice.cpp  voice.h
src/debug/: debug.cpp  debug.h  debug_log.h  geometry_editor.cpp  geometry_editor.h
src/ecs/: component.h  ecs.h  entity.h  entity_factory.cpp  entity_factory.h
src/ecs/components/: all_components.h  light.h  shadow_caster.h  sprite.h  talkable.h  transform.h  walker.h
src/game/: dialogue.cpp  dialogue.h  game.cpp  game.h  main.cpp  player.cpp  player.h  walker_system.cpp  walker_system.h
src/inventory/: inventory.cpp  inventory.h
src/navigation/: navigation.cpp  navigation.h
src/platform/mac/: mac_window.h  mac_window.mm  renderer_utils.h  renderer_utils.mm
src/platform/windows/: windows_window.cpp  windows_window.h
src/puzzles/: chase_point_puzzle.cpp  chase_point_puzzle.h  connect_cable_puzzle.cpp  connect_cable_puzzle.h  dot_connect_puzzle.cpp  dot_connect_puzzle.h  wrap_cable_puzzle.cpp  wrap_cable_puzzle.h
src/renderer/: animation.cpp  animation.h  asset_manager.cpp  asset_manager.h  opengl_compat.h  png_loader.cpp  png_loader.h  renderer.cpp  renderer.h  renderer_utils.cpp  renderer_utils.h  shader_loader.cpp  shader_loader.h  spritesheet_utils.cpp  spritesheet_utils.h  text.cpp  text.h  texture_loader.cpp  texture_loader.h
src/renderer/shaders/: basic.frag  basic.vert  basic_lit.frag  basic_lit.vert  color.frag  color.vert  outline.frag  outline.vert  rounded_rect.frag  rounded_rect.vert  segment.vert  tint.frag  upscale.frag  upscale.vert
src/save/: save_system.cpp  save_system.h
src/scene/: act_1.cpp  act_registry.cpp  act_registry.h  close_up.cpp  close_up.h  closeup_example.cpp  scene.cpp  scene.h  scene_registry.cpp  scene_registry.h  scene_test.cpp
src/scene/scenes/: scene_basement.cpp  scene_test.cpp  scene_test2.cpp
src/ui/: cursor.cpp  cursor.h  inventory_ui.cpp  inventory_ui.h  main_menu.cpp  main_menu.h  speechbubble_ui.cpp  speechbubble_ui.h  tooltip.cpp  tooltip.h  ui.h
tools/: generate_font.py  generate_ui_textures.py
